Atualização de mensagens de erro nos DTOS, ajuste no globalhandler, remoção de logs do security filters, atualização readme e postman